docs/0.14/_sources/api/gammapy.modeling.models.BackgroundModel.rst.txt
BackgroundModel
===============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: BackgroundModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~BackgroundModel.energy_center
      ~BackgroundModel.filename
      ~BackgroundModel.map
      ~BackgroundModel.name
      ~BackgroundModel.norm
      ~BackgroundModel.parameters
      ~BackgroundModel.reference
      ~BackgroundModel.tag
      ~BackgroundModel.tilt

   .. rubric:: Methods Summary

   .. autosummary::

      ~BackgroundModel.copy
      ~BackgroundModel.create
      ~BackgroundModel.evaluate
      ~BackgroundModel.from_dict
      ~BackgroundModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_center
   .. autoattribute:: filename
   .. autoattribute:: map
   .. autoattribute:: name
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: tilt

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: from_dict
   .. automethod:: to_dict
