docs/0.16/_sources/api/gammapy.modeling.models.BackgroundModel.rst.txt
BackgroundModel
===============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: BackgroundModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~BackgroundModel.default_parameters
      ~BackgroundModel.energy_center
      ~BackgroundModel.name
      ~BackgroundModel.norm
      ~BackgroundModel.parameters
      ~BackgroundModel.reference
      ~BackgroundModel.tag
      ~BackgroundModel.tilt

   .. rubric:: Methods Summary

   .. autosummary::

      ~BackgroundModel.copy
      ~BackgroundModel.create
      ~BackgroundModel.cutout
      ~BackgroundModel.evaluate
      ~BackgroundModel.from_dict
      ~BackgroundModel.stack
      ~BackgroundModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: default_parameters
   .. autoattribute:: energy_center
   .. autoattribute:: name
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: tilt

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: cutout
   .. automethod:: evaluate
   .. automethod:: from_dict
   .. automethod:: stack
   .. automethod:: to_dict
